# ColorLens

./: App.tsx  ColorLens.codegen.schema.json  QRScanner.js  app.json  babel.config.js  declarations.d.ts  gradle_assemble_debug_log.txt  index.js  package-lock.json  package.json  react-native.config.js  schema.json  tsconfig.json
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  ColorDetectorJSI.cpp  ColorDetectorNative.cpp  dalton_bridge.cpp  native_placeholder.cpp
android/app/src/main/cpp/daltonlens/: libDaltonLens.h
app/(tabs)/: _layout.tsx  about.js  camera.js  index.js  index.tsx
btn/: BackButton.tsx
ios/: Podfile
ios/ColorLens/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/ColorLens.xcodeproj/: project.pbxproj
screens/CBCamera/: CBCamera.hook.ts  CBCamera.styles.ts  CBCamera.tsx  CBCameraLogic.ts
screens/CLSetting/: CLSetting.styles.ts  CLSetting.tsx
screens/ColorDetector/: ColorDetector.styles.ts  ColorDetector.tsx  ColorDetectorLogic.ts
screens/DecisionScreen/: DecisionScreen.styles.ts
screens/SimulateCB/: SimulateCB.hook.ts  SimulateCB.styles.ts  SimulateCB.tsx
screens/SplashScreen/: SplashScreen.styles.ts  SplashScreen.tsx
screens/WelcomeScreen/: WelcomeScreen.styles.ts
src/native/: ColorDetectorNative.ts
tmp_apk/: AndroidManifest.xml  classes10.dex  classes11.dex  classes12.dex  classes13.dex  classes14.dex  classes15.dex  classes16.dex  classes2.dex  classes3.dex  classes4.dex  classes6.dex  classes7.dex  classes8.dex  classes9.dex  resources.arsc
(+213 files in other folders)
